# sakalsiz.github.io

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml
content/: site.yaml
content/blog/: 2026-03-18-hello-world.md  2026-03-20-birth-of-emoticons.md  2026-03-20-sysops.md  2026-03-22-fidonet.md  2026-03-24-nodes-and-points.md  2026-03-26-netmail.md  2026-03-28-echomail.md  2026-03-30-how-bbses-exchanged-messages.md  2026-03-30-sysops.md  2026-04-01-bluewave.md  2026-04-01-how-bbses-exchanged-messages.md  2026-04-03-uuencode-and-the-dna-of-email.md  2026-04-05-bluewave.md  2026-04-05-private-bbses.md  2026-04-07-fidonet-goes-local.md  2026-04-07-private-bbses.md  2026-04-09-fidonet-goes-local.md  2026-04-09-shareware-revolution.md  2026-04-11-birth-of-emoticons.md  2026-04-11-shareware-revolution.md  2026-04-13-from-html-to-rust.md  2026-04-13-the-zirve.md  2026-04-14-hello-world.md  2026-04-15-arrow-keys-and-other-time-machines.md  2026-04-15-telnet-bbses.md  2026-04-17-telnet-bbses.md  2026-04-19-the-zirve.md
content/pages/: about.md  filearea.md  guestbook.md  links.md  projects.md  skills.md
crates/bbs-build/: Cargo.toml
crates/bbs-build/src/: build.rs  config.rs  content.rs  main.rs  markdown.rs  template.rs
crates/bbs-build/templates/: bbs.css  bbs.js
src/: bbs-core.js  bbs-markdown.js  bbs-menu.js  bbs-sounds.js  bbs-theme.js
