[workspace]
resolver = "2"
members = ["crates/bbs-build"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Mustafa"]
repository = "https://github.com/sakalsiz/bbs-framework"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
walkdir = "2"
